<resources>
    <string name="app_name">Triangle</string>
    <string name="app_name_version">Triangle  V0.5011.R1225a</string>
    <string name="calc">Calc\n계산</string>
    <string name="clear">Clear\n지우기</string>
    <string name="input_a_and_b">Please input A and B!</string>
    <string name="input_correct_a_and_b">All values must be bigger than 0!</string>
    <string name="height">Height(A)</string>
    <string name="width">Width(B)</string>
    <string name="angle_a">Angle(A)</string>
    <string name="angle_b">Angle(B)</string>
    <string name="angle_c">Angle(C)</string>
    <string name="round_area">Round=?\nArea=?</string>
    <string name="round">Round=</string>
    <string name="area">Area=</string>
</resources>