<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_weight="3"
                app:srcCompat="@drawable/triangle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/answer"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:text="@string/calc" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:text="@string/clear" />
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/triCornerA"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bluebutton"
                    android:hint="@string/height"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:paddingLeft="30dp"
                    android:textSize="30dp" />

                <EditText
                    android:id="@+id/triCornerB"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="30dp"
                    android:background="@drawable/redbutton"
                    android:hint="@string/width"
                    android:inputType="numberDecimal"
                    android:maxLength="9"
                    android:paddingLeft="30dp" />

                <TextView
                    android:id="@+id/triCornerC"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/greenbutton"
                    android:textSize="30dp"
                    android:text="대각선(C)"
                    android:paddingLeft="30dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/triAngleA"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bluebutton"
                    android:textSize="30dp"
                    android:hint="@string/angle_a"
                    android:inputType="numberDecimal"
                    android:paddingLeft="30dp" />

                <TextView
                    android:id="@+id/triAngleB"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/redbutton"
                    android:textSize="30dp"
                    android:hint="@string/angle_b"
                    android:inputType="numberDecimal"
                    android:paddingLeft="30dp" />

                <TextView
                    android:id="@+id/triAngleC"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/greenbutton"
                    android:textSize="30dp"
                    android:text="90'"
                    android:paddingLeft="30dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text=""
            android:hint="@string/round_area"
            android:paddingLeft="20dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>